--- a/demo-course/course/html/5deeaa02f22f4d9fba307ab04cf128fb.html
+++ b/demo-course/course/html/5deeaa02f22f4d9fba307ab04cf128fb.html
@@ -1,5 +1,4 @@
 <div class="try-it short-content">
 <h3>Try it!</h3>
-<p>A content library needs to be created outside of a course and so it cannot be packaged along with this demonstration course. Therefore, a video demonstration is included below that shows the creation of a 6 question bank and a quiz created with a random selection of three of the six questions. Each learner will have a unique "drawing" of the three questions and their order. </p>
-<p>If you have staff privileges on this course and you <em>do </em>want to add a randomized content library to this course, we've included the steps to help you do so at the bottom of this page. </p>
+<p>Below this callout box are two questions. If you inspect these questions in Studio, you will see that they are randomly pulled from a content library. Not only that, but the questions randomly chosen for you may not be the same as another user in this course. </p>
 </div>
