fix: Remove the SCORM X Block to avoid import errors on older Open edX instances

--- a/demo-course/course/html/aa1eb42464f14ccd91999ed88e3a154c.html
+++ b/demo-course/course/html/aa1eb42464f14ccd91999ed88e3a154c.html
@@ -1,8 +1,8 @@
 <div class="callout">
 <h2>Note: Configuration Required</h2>
-<p>There are two pieces of configuration that may be required to view the SCORM demonstration. If you choose not to do either, then you may also review the video to see the functionality. </p>
+<p>The Scorm X-block is <em>not included by default</em> in this course because it is not installed on some older versions of the Open edX® LMS, and therefore it has the potential to cause an error when importing the course. There are two pieces of configuration that may be required to view the SCORM demonstration. If you choose not to do either, then you may also review the video to see the functionality. </p>
 <h5>SCORM XBlock</h5>
-<p>The SCORM X-block may not be installed by default on your instance of the Open edX® platform. If it is not installed, then the "Try it!" examples below will not work correctly. If you would like to install the SCORM XBlock, follow the <a href="https://github.com/overhangio/openedx-scorm-xblock#installation" target="_blank" rel="noopener">documentation</a>.</p>
+<p>The SCORM X-block may not be installed by default on your instance of the Open edX® platform, especially if you have an instance older than Nutmeg. If it is not installed, then you will not have the option to add a SCORM component in your Advanced components list in Studio. If you would like to install the SCORM XBlock, follow the <a href="https://github.com/overhangio/openedx-scorm-xblock#installation" target="_blank" rel="noopener">documentation</a>.</p>
 <h5>SCORM Demonstration Package</h5>
-<p>SCORM packages do not migrate with courses, so you will have to upload the SCORM package in studio. The package can be downloaded <a href="https://articulate-heroes.s3.amazonaws.com/uploads/attachment/attachment_url/55098/SL360_LMS_SCORM_2004.zip" target="_blank" rel="noopener">here</a>. Review the video to see how to upload the package into the SCORM XBlock. </p>
+<p>If the SCORM X-block is installed, then you will be able to add the SCORM x-block. You will next need to upload the SCORM package in studio. The package can be downloaded <a href="https://articulate-heroes.s3.amazonaws.com/uploads/attachment/attachment_url/55098/SL360_LMS_SCORM_2004.zip" target="_blank" rel="noopener">here</a>. Review the video to see how to upload the package into the SCORM XBlock. </p>
 </div>
