--- a/demo-course/course/html/f7ee293ed3064ff69ed77f31f0a6265c.html
+++ b/demo-course/course/html/f7ee293ed3064ff69ed77f31f0a6265c.html
@@ -1,4 +1,4 @@
 <div class="try-it">
 <h3>Try it!</h3>
-<p>The SCORM demonstration below was built in Storyline 360 and demonstrates the progression of a course with a quiz at the end. Keep in mind there are <em>many</em> tools and ways to configure SCORM exercises.</p>
+<p>Try adding your SCORM X block and package below. The SCORM demonstration included with this course was built in Storyline 360 and demonstrates the progression of a course with a quiz at the end. Keep in mind there are <em>many</em> tools and ways to configure SCORM exercises.</p>
 </div>
